fix: update husky hooks and remove unnecessary packages
