# src/config/routes.ts
@@ -1,0 +1,12 @@
+const API_PREFIX = '/api';
+
+const API_ROUTES = {
+  HEALTH: `${API_PREFIX}/health`,
+  DOCS: `${API_PREFIX}/docs`,
+  USERS: `${API_PREFIX}/users`,
+  POSTS: `${API_PREFIX}/posts`,
+  JOURNALS: `${API_PREFIX}/journals`,
+  LOCATIONS: `${API_PREFIX}/locations`
+};
+
+export default API_ROUTES;
