# src/controllers/index.ts
@@ -1,0 +1,4 @@
+export * from './user';
+export * from './post';
+export * from './journal';
+export * from './location';
